--- a/.env_dist
+++ b/.env_dist
@@ -6,3 +6,6 @@ MYSQL_ROOT_PASSWORD=<your-mysql-root-password>
 MYSQL_USER=<your-mysql-user>
 MYSQL_PASSWORD=<your-mysql-user>
 MYSQL_DATABASE=<your-mysql-user>
+
+PMA_HOST=<your-public-ip-address>
+PMA_PORT=<your-mysql-port>
