--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - ${DOCUMENT_ROOT}:/var/www/html
     links:
-      - mysql:mysql
+      - 'mysql'
     environment:
       XDEBUG_CONFIG: remote_host=${REMOTE_HOST_XDEBUG}
 
@@ -41,13 +41,14 @@ services:
     image: phpmyadmin/phpmyadmin
     container_name: phpmyadmin
     links:
-      - mysql:mysql
+    - 'mysql'
     restart: always
     ports:
       - 8080:80
     environment:
       PMA_ARBITRARY: 1
-      PMA_HOST: mysql
+      PMA_HOST: ${PMA_HOST}
+      PMA_PORT: ${PMA_PORT}
 
 volumes:
   mysql-data:
