add docker-compose.override.yml.dist, edit .env_dist, README, .gitignore

--- a/.env_dist
+++ b/.env_dist
@@ -1,3 +1,4 @@
+COMPOSE_PROJECT_NAME=<project-name>
 DOCUMENT_ROOT=<your-document-root>
 REMOTE_HOST_XDEBUG=<your-public-ip-address>
 
@@ -8,3 +9,4 @@ MYSQL_PASSWORD=<your-mysql-user>
 MYSQL_DATABASE=<your-mysql-user>
 
 PMA_PORT=<your-mysql-port>
+
