--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - 3306:3306
     volumes:
-      - ./mysql-init:/docker-entrypoint-initdb.d
+      - ./init-db:/docker-entrypoint-initdb.d
       - mysql-data:/var/lib/mysql
     command:
       - --max_allowed_packet=1032505856
