update filesystem, dockerfile php-apache

--- a/config/vhost/example.default.conf
+++ b/config/vhost/example.default.conf
@@ -1,14 +1,14 @@
 <VirtualHost *:80>
-    ServerName       laraia-corporate.local
+    ServerName       servername.local
     ServerAlias      localhost
 
 
     # turn off mod_deflate for PHP requests, ... this is necessary because of a bug in mod_fastcgi
     SetEnvIfNoCase Request_URI "\.(php)$" no-gzip dont-vary
 
-    DocumentRoot /var/www/html/web
+    DocumentRoot /var/www/html
 
-    <Directory /var/www/html/web>
+    <Directory /var/www/html>
             AllowOverride all
             Order allow,deny
             Allow from all
@@ -20,6 +20,6 @@
     # this is needed to pass the auth header correctly - fastcgi environment
     RewriteRule ".*" "-" [E=HTTP_AUTHORIZATION:%{HTTP:Authorization},L]
 
-    ErrorLog  /var/log/laraia-corporate-error.log
-    CustomLog /var/log/laraia-corporate-access.log combined
+    ErrorLog  /var/log/custom-error.log
+    CustomLog /var/log/custom-access.log combined
 </VirtualHost>
