--- a/.env_dist
+++ b/.env_dist
@@ -1,6 +1,6 @@
 COMPOSE_PROJECT_NAME=<project-name>
 DOCUMENT_ROOT=<your-document-root>
-REMOTE_HOST_XDEBUG=<your-public-ip-address>
+REMOTE_HOST_XDEBUG=host.docker.internal
 
 TIMEZONE=<your-timezone>
 MYSQL_ROOT_PASSWORD=<your-mysql-root-password>
@@ -10,3 +10,6 @@ MYSQL_DATABASE=<your-mysql-user>
 
 PMA_PORT=<your-mysql-port>
 
+#FOR SMTP
+GMAIL_USER=
+GMAIL_PASSWORD=
